RESOLVED FIXED115104
EventSource: Synchronous loader callback not handled properly
https://bugs.webkit.org/show_bug.cgi?id=115104
Summary EventSource: Synchronous loader callback not handled properly
Per-Erik Brodin
Reported 2013-04-24 06:07:09 PDT
When attempting a cross-origin request towards a non-HTTP URL, an early verification of the protocol scheme will cause didFailAccessControlCheck to be called synchronously before the loader has even finished being created. This special case is not handled properly, since we try to cancel a non-existing loader, which results in a crash.
Attachments
patch (8.33 KB, patch)
2013-04-24 06:12 PDT, Per-Erik Brodin
no flags
Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2 (808.85 KB, application/zip)
2013-04-24 09:53 PDT, Build Bot
no flags
Per-Erik Brodin
Comment 1 2013-04-24 06:12:15 PDT
Created attachment 199419 [details] patch Proposed patch.
Build Bot
Comment 2 2013-04-24 09:53:51 PDT
Comment on attachment 199419 [details] patch Attachment 199419 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/44890 New failing tests: fast/repaint/japanese-rl-selection-repaint-in-regions.html
Build Bot
Comment 3 2013-04-24 09:53:52 PDT
Created attachment 199496 [details] Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-14 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.2
WebKit Commit Bot
Comment 4 2013-04-25 02:50:29 PDT
Comment on attachment 199419 [details] patch Clearing flags on attachment: 199419 Committed r149098: <http://trac.webkit.org/changeset/149098>
WebKit Commit Bot
Comment 5 2013-04-25 02:50:32 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.