Source/WebCore/page/EventSource.cpp
@@ -65,7 +65,7 @@ inline EventSource::EventSource(ScriptExecutionContext* context, const KURL& url
     , m_withCredentials(false)
     , m_state(CONNECTING)
     , m_decoder(TextResourceDecoder::create("text/plain", "UTF-8"))
-    , m_reconnectTimer(this, &EventSource::reconnectTimerFired)
+    , m_connectTimer(this, &EventSource::connectTimerFired)
     , m_discardTrailingNewline(false)
     , m_requestInFlight(false)
     , m_reconnectDelay(defaultReconnectDelay)
@@ -101,7 +101,7 @@ PassRefPtr<EventSource> EventSource::create(ScriptExecutionContext* context, con
     RefPtr<EventSource> source = adoptRef(new EventSource(context, fullURL, eventSourceInit));
 
     source->setPendingActivity(source.get());
-    source->connect();
+    source->scheduleInitialConnect();
     source->suspendIfNeeded();
 
     return source.release();
@@ -155,14 +155,22 @@ void EventSource::networkRequestEnded()
         unsetPendingActivity(this);
 }
 
+void EventSource::scheduleInitialConnect()
+{
+    ASSERT(m_state == CONNECTING);
+    ASSERT(!m_requestInFlight);
+
+    m_connectTimer.startOneShot(0);
+}
+
 void EventSource::scheduleReconnect()
 {
     m_state = CONNECTING;
-    m_reconnectTimer.startOneShot(m_reconnectDelay / 1000);
+    m_connectTimer.startOneShot(m_reconnectDelay / 1000);
     dispatchEvent(Event::create(eventNames().errorEvent, false, false));
 }
 
-void EventSource::reconnectTimerFired(Timer<EventSource>*)
+void EventSource::connectTimerFired(Timer<EventSource>*)
 {
     connect();
 }
@@ -189,16 +197,16 @@ void EventSource::close()
         return;
     }
 
-    // Stop trying to reconnect if EventSource was explicitly closed or if ActiveDOMObject::stop() was called.
-    if (m_reconnectTimer.isActive()) {
-        m_reconnectTimer.stop();
-        unsetPendingActivity(this);
-    }
+    // Stop trying to connect/reconnect if EventSource was explicitly closed or if ActiveDOMObject::stop() was called.
+    if (m_connectTimer.isActive())
+        m_connectTimer.stop();
 
     if (m_requestInFlight)
         m_loader->cancel();
-
-    m_state = CLOSED;
+    else {
+        m_state = CLOSED;
+        unsetPendingActivity(this);
+    }
 }
 
 const AtomicString& EventSource::interfaceName() const
@@ -305,9 +313,13 @@ void EventSource::didFailRedirectCheck()
 void EventSource::abortConnectionAttempt()
 {
     ASSERT(m_state == CONNECTING);
-    ASSERT(m_requestInFlight);
 
-    m_loader->cancel();
+    if (m_requestInFlight)
+        m_loader->cancel();
+    else {
+        m_state = CLOSED;
+        unsetPendingActivity(this);
+    }
 
     ASSERT(m_state == CLOSED);
     dispatchEvent(Event::create(eventNames().errorEvent, false, false));
